# spec-system

./: AGENTS.md  DOCS_SYSTEM_INSTRUCTION_SET.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.codex/: config.toml
.github/PULL_REQUEST_TEMPLATE/: docs-system.md
.github/scripts/: auto_merge.py
.github/workflows/: auto-merge.yml  auto-tag-from-main.yml  ci.yml  release.yml
docs/: CONTRACT_CHANGES.md  EPICS.md  FEATURES.md  MASTER_SPEC.md  PRODUCT_MAP.md  STEERING.md  TRACEABILITY.md
docs/.specctl/: impact-baseline.json
docs/DECISIONS/: ADR_TEMPLATE.md
docs_spec_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: bugbot_poll_worker.sh  migrate_existing_project.py  sync_instruction_set.py
scripts/codex/: project-actions.sh  worktree-setup.sh
skills/docs-spec-system/: SKILL.md
specctl/: __init__.py  agentic_epic.py  automerge_policy.py  cli.py  command_utils.py  constants.py  contract_index.py  epic_index.py  feature_index.py  impact.py  io_utils.py  models.py  oneshot_utils.py  runner_adapter.py
specctl/commands/: __init__.py  approve.py  check.py  codex_check.py  codex_setup.py  contract_create.py  epic_check.py  epic_create.py  epic_migrate_agentic.py  feature_check.py  feature_create.py  impact_refresh.py  impact_scan.py  init.py  lint.py  migrate.py  oneshot_check.py  oneshot_common.py  oneshot_finalize.py  oneshot_report.py  oneshot_resume.py  oneshot_run.py  oneshot_runtime.py  render.py  report.py
specctl/renderers/: __init__.py  product_map.py  traceability.py
specctl/validators/: __init__.py  contracts.py  epics.py  ids.py  lifecycle.py  oneshot.py  project.py  requirements.py  traceability.py
tests/integration/: test_agentic_real_projects.py  test_cli.py
tests/unit/: test_agentic_epic.py  test_automerge_policy.py  test_codex_check.py  test_contracts.py  test_epics.py  test_impact.py  test_oneshot_runtime.py  test_runner_adapter.py  test_validators.py
(+37 files in other folders)
