[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "docs-spec-system"
version = "2.1.0"
description = "Spec System v2 CLI and skill package"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "docs-spec-system" }]
keywords = ["spec", "documentation", "llm", "requirements", "traceability"]

[project.scripts]
specctl = "specctl.cli:main"

[tool.setuptools.packages.find]
include = ["specctl*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
testpaths = ["tests"]
